// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--show-config > should show config > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] {
  "sequence": false,
  "logLevel": "log",
  "showConfig": true,
  "showSummary": false,
  "isWorkerThread": false,
  "maxWorkers": 1,
  "minWorkers": 1,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "configPath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`--show-config > should show config with extra options > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 2–3 workers for task execution</BoldDim>
[log] {
  "sequence": false,
  "logLevel": "log",
  "showConfig": true,
  "showSummary": false,
  "isWorkerThread": false,
  "minWorkers": 2,
  "maxWorkers": 3,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "configPath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed)</BoldDim>
`;
